style.css
/*        MOBILE FIRST CSS          */

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  background-color: #f7e4d4;
  width: 100%;
  height: 100vh;
  display: flex;
  align-items: center;
  justify-content: center;
}

form {
  width: 100%;
  padding: 20px;
  position: relative;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  gap: 1.5rem;
}

h1 {
  font-family: "EB Garamond", serif;
  font-size: 36px;
  text-align: left;
  color: #467745;
  font-weight: 200;
  opacity: 0;
  animation: fadeIn 500ms ease-in forwards;
}

input[type="text"],
textarea {
  font-family: "Montserrat", sans-serif;
  font-size: 16px;
  width: calc(100% - 40px);
  max-width: 480px;
  height: 64px;
  color: #467745;
  padding: 0.5rem;
  border: none;
  transition: 250ms;
  box-shadow: 1px 2px 4px rgba(0, 0, 0, 0.2);
  opacity: 0;
  animation: fadeIn 500ms 250ms ease-in forwards;
}

input[type="text"]:hover,
textarea:hover {
  box-shadow: 2px 4px 8px rgba(0, 0, 0, 0.5);
}

textarea {
  height: 120px;
  animation-delay: 500ms;
}

label {
  display: flex;
  align-items: center;
  justify-content: space-between;
  gap: 1rem;
  cursor: pointer;
  opacity: 0;
  animation: fadeIn 500ms 750ms ease-in forwards;
}

input[type="checkbox"] {
  transform: scale(1.5);
  cursor: pointer;
}

label p {
  font-family: "Montserrat", sans-serif;
  font-size: 16px;
  color: #467745;
}

button {
  font-family: "EB Garamond", serif;
  font-size: 21px;
  display: flex;
  align-items: center;
  justify-content: center;
  max-width: 280px;
  height: 80px;
  background-color: #04a75b;
  color: #f7e4d4;
  letter-spacing: 0.2em;
  border-radius: 40px;
  border: none;
  padding: 0 5rem;
  margin-top: 1rem;
  cursor: pointer;
  position: relative;
  overflow: hidden;
  opacity: 0;
  animation: fadeIn 500ms 1000ms ease-in forwards;
}

button::before,
button::after {
  content: "";
  width: 50%;
  height: 100%;
  background-color: #467745;
  position: absolute;
  top: 0;
  transition: 300ms;
}

button::before {
  left: 0;
}
button::after {
  right: 0;
}

button span {
  position: relative;
  z-index: 10;
}

button:hover::before,
button:hover::after {
  width: 0;
}

@media (min-width: 520px) {
  h1 {
    text-align: center;
  }
}

@media (min-width: 1024px) {
  h1 {
    font-size: 48px;
  }
}

@keyframes fadeIn {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

